--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">News</string>
+    <string name="API_KEY">7c9d64117c284251891aeb3becb4cc1b</string>
 </resources>
